--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "cannxperts-web",
+  "name": "cannxperts-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3001",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "framer-motion": "^10.16.16",
-    "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0"
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8"
   }
 }
